--- a/dissertation/proposal.tex
+++ b/dissertation/proposal.tex
@@ -61,7 +61,7 @@ a project developed by a group of researchers from The Pennsylvania State
 University, Duke University and Intel Labs. They point out that the
 access control in Android is rather coarse-grained, with all-or-nothing
 policy. This means that once an application is given access to a resource,
-it can do whatever it wants with it, and doesn't need any further consent 
+it can do whatever it wants with it, and does not need any further consent 
 from the user.
 
 TaintDroid modifies several core parts of the Android platform, such as 
@@ -79,7 +79,7 @@ Following the work conducted on TaintDroid, the outcome of this project
 will be a tool with similar goals, but achieving them in a different 
 manner. TaintDroid integrates into the lower levels of the operating 
 system, altering Dalvik's memory management and instructions to store and
-propagate the tags transparently to the applications running on top of 
+propagate the labels transparently to the applications running on top of 
 it. However, similar result can be accomplished by extracting the 
 executable code from the application's package and instrumenting it to 
 carry out the information-flow analysis itself, without any modification 
@@ -87,7 +87,7 @@ to the platform needed, which is what this project will try to attain.
 
 Despite being intended mostly for use by professionals, the configuration 
 of monitored privacy policies should be intuitive enough even for users 
-without deep understanding of taint-based analysis. Typical user will:
+without deep understanding of taint-based flow analysis. Typical user will:
 \begin{itemize}
 \item{connect their Android device to the computer}
 \item{choose an installed application that should be instrumented}
@@ -98,14 +98,14 @@ without deep understanding of taint-based analysis. Typical user will:
       violations}
 \end{itemize}
 
-Limitations and advantages of both solutions will be thoroughly 
-compared in the evaluation section of the dissertation. Obviously, 
-the low-level method makes it possible to trace the tags throughout 
-the system by patching the IPC kernel module, or storing them within 
-attributes of files. This can't be done by per-application bytecode 
-instrumentation, but the fact that each application is processed before 
-it is loaded back into the device and executed leaves room for static 
-analysis of the code, perhaps even alteration of its behaviour. 
+Obviously, the low-level method makes it possible to trace the labelled data 
+throughout the system by patching the IPC kernel module, or by storing the 
+labels within attributes of files. This cannot be done by per-application 
+bytecode instrumentation, but the fact that each application is processed 
+before it is loaded back into the device and executed leaves room for static 
+analysis of the code, perhaps even modification of its behaviour. Limitations 
+and advantages of both solutions will be thoroughly compared in the evaluation 
+section of the dissertation
 
 \section*{Resources Required}
 
@@ -133,7 +133,7 @@ During my other internship in the summer of 2012, I worked on Java PathFinder,
 a software-verification tool for JVM. My plugin verified correct usage of 
 physical units in scientific computation by runtime assignment of attributes 
 with unit information to numerical values in the memory, and their propagation 
-during arithmetic operations, which is a form of flow tracing. 
+during arithmetic operations, which can be regarded as a form of flow tracing. 
 
 In this project I hope to combine my prior skills and apply them in a 
 slightly different environment of the Dalvik VM and Android framework,
@@ -144,70 +144,66 @@ of bytecode.
 
 The main outcome of this project will be a desktop application written 
 in Java, capable of instrumenting given Dalvik executables, known as DEX
-files, according to options specified via command-line arguments or 
+files, according to options specified via command-line arguments or via
 graphical user interface.
 
 %It will use the ASMDEX \cite{asm.ow2.org/asmdex-index.html} library to 
 %parse, modify and reconstruct Dalvik bytecode. 
 
+The development of a dependable code instrumentation, which will reliably 
+identify sources and sinks, and which will propagate the tags throughout 
+the application will form essential part of the project. This requires 
+detailed analysis of the effects of each instruction of the Dalvik VM, and 
+thorough testing. Special attention will need to be given to correct 
+instrumentation of the exception mechanism.
+
 Data sources and sinks will be specified as an XML file containing a list
 of classes and/or methods inside the Android library, accessing which
-should trigger the tagging mechanism. The same will apply to so-called 
-sanitizers, methods that remove any present tags, for example the hashing 
-functions. Specifications of commonly used sources, sinks and sanitizers 
-will be part of the distribution.
+should trigger the labelling mechanism. The same will apply to so-called 
+sanitizing methods, calling which should not propagate labels. Among these
+are for example the hashing functions. Specifications of commonly used 
+sources, sinks and sanitizers will be part of the distribution.
+
+Typical overhead of dynamic data-flow analysis by instruction-level 
+instrumentation varies between 3 and 35 times of the original speed. While 
+there is very limited room for making the instrumentation itself more 
+efficient, time can easily be invested into static analysis of the code which 
+will identify the parts of the code that need to be instrumented, i.e. the 
+possible paths between sources and sinks. 
 
 The application will also be able to extract executable code from 
 applications on a connected device by executing tools from the Android SDK
-and calling apktool \cite{code.google.com/p/android-apktool}. After the 
-instumentation, the modified application will be repackaged and uploaded back 
-to the device. Since all packages need to be signed and there's no access to 
+and by calling apktool \cite{code.google.com/p/android-apktool}. After the 
+instrumentation, the modified application will be repackaged and uploaded back 
+to the device. Since all packages need to be signed and there is no access to 
 the original key, packages will be signed by a key of user's choice.
-
-Essential part of the project will form the development of a dependable code 
-instrumentation, which will reliably identify the sources and sinks and
-propagate the tags throughout the application. This requires detailed
-analysis of the effects of each instruction of the Dalvik VM, and 
-thorough testing. Special attention will need to be given to correct 
-instrumentation of the exception mechanism, which will require static 
-analysis of the location of exception-throwing instructions and 
-corresponding try/catch blocks, utilising knowledge from the Optimising
-Compilers course.
-
-Typical overhead of dynamic data-flow analysis by instruction-level 
-varies between 3 and 35 times of the original speed. While there is
-very limited room for making the instrumentation itself more efficient,
-time can easily be invested into static analysis of the code which will
-identify the parts of the code that need to be instrumented, i.e. the 
-possible paths between sources and sinks. 
 
 The development process will follow the philosophy of Test Driven 
 Development. Thus a significant amount of time will be spent on building 
 a robust set of unit tests to ensure high quality of code. JUnit will be 
 used to test the internal of the instrumenting application. A set of 
-shell scripts will be created to automatically try to execute a collection
+shell scripts will be created to automatically execute a collection
 of tailored snippets of code on an actual Dalvik virtual machine, 
-comparing the output of the original and the instrumented version to ensure
-that the instrumentation doesn't affect the behaviour.
+comparing its output with the output its instrumented counterpart.
 
 \subsubsection*{Implicit-flow analysis}
 
 TaintDroid focuses strictly on tracing the explicit flows of information, 
-by propagating the tags when data-handling CPU instructions are used. 
-But information can be leaked via implicit flows (branching instructions) 
-as well. Consider the following example:
+by propagating the labels when data-handling CPU instructions are used. 
+But information can be leaked via implicit flows (conditional branching 
+instructions) as well. Consider the following example:
 
 \begin{verbatim}
-int sensitiveData = getSensitiveData(); // tagged variable
-int leakedData = 0; // tag-free variable
+int sensitiveData = getSensitiveData(); // labelled variable
+int leakedData = 0; // label-free variable
 
 while (sensitiveData--)
     leakedData++;
 
-output(leakedData); // leakedData still not tagged
+output(leakedData); // leakedData still not labelled
 \end{verbatim}
 
-In this case, \verb|leakedData| has not been tagged, because there is 
+In this case, \verb|leakedData| has not been labelled, because there is 
 no explicit information flow from \verb|sensitiveData| into it. Instead, 
 \verb|sensitiveData| effects the control flow of the program, leaking
 the information into \verb|leakedData| implicitly. 
@@ -254,12 +250,12 @@ Detecting Security Attacks" paper, which studied taint-based flow tracing
 in the context of x86 server applications suggests a form of dynamic 
 optimization called FastPath. It includes both the original and 
 instrumented version of each method in the resulting executable, and
-dynamically decides which will be called based on the presence of non-empty 
-tags in its arguments. Authors of the paper argued that only 2\% of typical 
-function calls were tagged, which is why this optimisation had such  
+dynamically decides which will be called based on the presence of labelled 
+arguments. Authors of the paper argued that only 2\% of typical 
+function calls were labelled, which is why this optimisation had such  
 impact on performance. Whether this is true in the context of Android mobile
 applications as well is not clear. Before implementing FastPath, a short 
-study of the number of unlabelled method calls should be conducted.
+study of the number of labelled method calls should be conducted.
 
 \section*{Success Criterion}
 
